# Scimus

./: .gitignore  CLAUDE.md  README.md  package.json
apps/backend/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/db/: schema.ts
apps/backend/src/services/: storage.service.ts
apps/frontend/: package.json  tsconfig.app.json  vite.config.ts
apps/frontend/src/: App.tsx
apps/frontend/src/components/: Header.stories.tsx  Header.tsx  Layout.tsx  PDFViewer.tsx  PageUploader.tsx  PdfFileCard.tsx  PdfFileList.tsx  Sidebar.tsx
apps/frontend/src/components/ui/shadcn-io/dropzone/: index.tsx
apps/frontend/src/pages/: FilesPage.tsx  Home.tsx  ImagesPage.tsx  NotesPage.tsx  PdfPreview.tsx  PdfsPage.tsx
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
frontend/: package.json  pnpm-lock.yaml
scripts/: setup-minio-bucket.sh  start-minio.sh
services/python/: README.md  main.py  pyproject.toml  requirements.txt
services/python/ml/: __init__.py
services/python/pdf/: __init__.py
