[project]
name = "scimus-python-services"
version = "0.1.0"
description = "Python microservices for machine learning and PDF processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]
